code clean + login

--- a/src/assets/style/media.module.scss
+++ b/src/assets/style/media.module.scss
@@ -1,14 +1,15 @@
 $breakpointMobile: 375px;
 $breakpointTablet: 768px;
 
-// $media: (
-  $mobile: '(max-width: #{$breakpointMobile})';
-  $tablet: '(max-width: #{$breakpointTablet})';
-// );
+
+$mobile: '(max-width: #{$breakpointMobile})';
+$tablet: '(max-width: #{$breakpointTablet})';
+$desktop: '(min-width: #{$breakpointTablet})';
 
 :export {
   breakpointMobile: $breakpointMobile;
   breakpointTablet: $breakpointTablet;
   mobile: unquote($mobile);
   tablet: unquote($tablet);
+  desktop: unquote($desktop);
 }
